--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+$yellow: yellow;
+
 .App {
   text-align: center;
 }
@@ -6,10 +8,13 @@
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
+  .app {
+    display: block;
+  }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: $yellow;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
